{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 91,
  "lineage": "6381e6b1-9682-88f0-1381-b417bd731df9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-05d0d8b7a304708a8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-05d0d8b7a304708a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0d8b7a304708a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          }
        },
        {
          "index_key": "subnet-0a3cdc9d2aef2db6e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0a3cdc9d2aef2db6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3cdc9d2aef2db6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          }
        },
        {
          "index_key": "subnet-0bf7e93e0acfd4242",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0bf7e93e0acfd4242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7e93e0acfd4242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:vpc/vpc-08a252cde0bffb7bc",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04516fdaf051b9eb8",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-28fad44f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ecs-blueprint-infra"
                ]
              }
            ],
            "id": "vpc-08a252cde0bffb7bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ffebcfd750c76b3",
            "owner_id": "409489027555",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:loadbalancer/app/ecsdemo-frontend-alb/e7ba25b619ce7d54",
            "arn_suffix": "app/ecsdemo-frontend-alb/e7ba25b619ce7d54",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecsdemo-frontend-alb-1429581121.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:loadbalancer/app/ecsdemo-frontend-alb/e7ba25b619ce7d54",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecsdemo-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01a30ab4b07bf1a77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08de42269b92af062"
              },
              {
                "subnet_id": "subnet-0bbe496e2cf0a5cdb"
              },
              {
                "subnet_id": "subnet-0f6a146546ee17181"
              }
            ],
            "subnets": [
              "subnet-08de42269b92af062",
              "subnet-0bbe496e2cf0a5cdb",
              "subnet-0f6a146546ee17181"
            ],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-alb"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.vpc",
            "module.service_alb_security_group.aws_security_group.this",
            "module.service_alb_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:listener/app/ecsdemo-frontend-alb/e7ba25b619ce7d54/3aed0b25583ccca9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:targetgroup/ecsdemo-frontend-tg/0985ba06181267c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:listener/app/ecsdemo-frontend-alb/e7ba25b619ce7d54/3aed0b25583ccca9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:loadbalancer/app/ecsdemo-frontend-alb/e7ba25b619ce7d54",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.vpc",
            "module.service_alb.aws_lb.this",
            "module.service_alb.aws_lb_target_group.main",
            "module.service_alb_security_group.aws_security_group.this",
            "module.service_alb_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:targetgroup/ecsdemo-frontend-tg/0985ba06181267c1",
            "arn_suffix": "targetgroup/ecsdemo-frontend-tg/0985ba06181267c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:409489027555:targetgroup/ecsdemo-frontend-tg/0985ba06181267c1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecsdemo-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-tg"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:security-group/sg-01a30ab4b07bf1a77",
            "description": "Security group for client application",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a30ab4b07bf1a77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-blueprint-infra-alb-sg-20221012151433683100000003",
            "name_prefix": "ecs-blueprint-infra-alb-sg-",
            "owner_id": "409489027555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-alb-sg"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-alb-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.10.0/24",
              "10.0.11.0/24",
              "10.0.12.0/24"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-678207486",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a30ab4b07bf1a77",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.private_cidr",
            "data.aws_subnets.private",
            "data.aws_vpc.vpc",
            "module.service_alb_security_group.aws_security_group.this",
            "module.service_alb_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.service_alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2827755627",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01a30ab4b07bf1a77",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.service_alb_security_group.aws_security_group.this",
            "module.service_alb_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.service_task_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:security-group/sg-06b9b99671d5f6682",
            "description": "Security group for service task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b9b99671d5f6682",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a30ab4b07bf1a77"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecsdemo-frontend-task-sg-20221012151432072200000001",
            "name_prefix": "ecsdemo-frontend-task-sg-",
            "owner_id": "409489027555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-task-sg"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecsdemo-frontend-task-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service_task_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1597717398",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b9b99671d5f6682",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.service_task_security_group.aws_security_group.this",
            "module.service_task_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.service_task_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 3000,
            "id": "sgrule-2735058241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b9b99671d5f6682",
            "self": false,
            "source_security_group_id": "sg-01a30ab4b07bf1a77",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.service_alb_security_group.aws_security_group.this",
            "module.service_alb_security_group.aws_security_group.this_name_prefix",
            "module.service_task_security_group.aws_security_group.this",
            "module.service_task_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:network-acl/acl-0d127c2ff3a47f5be",
            "default_network_acl_id": "acl-0d127c2ff3a47f5be",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d127c2ff3a47f5be",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "409489027555",
            "subnet_ids": [
              "subnet-05d0d8b7a304708a8",
              "subnet-08de42269b92af062",
              "subnet-0a3cdc9d2aef2db6e",
              "subnet-0bbe496e2cf0a5cdb",
              "subnet-0bf7e93e0acfd4242",
              "subnet-0f6a146546ee17181"
            ],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:route-table/rtb-04ffebcfd750c76b3",
            "default_route_table_id": "rtb-04ffebcfd750c76b3",
            "id": "rtb-04ffebcfd750c76b3",
            "owner_id": "409489027555",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:security-group/sg-0336f42ca603506f4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0336f42ca603506f4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "409489027555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-default"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fcf8092982c6fc5",
            "association_id": "eipassoc-06b34b52fa2cb1cb0",
            "domain": "vpc",
            "id": "eipalloc-05fcf8092982c6fc5",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04b34cede225460c2",
            "private_dns": "ip-10-0-0-143.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-54-251-45-105.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.45.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-ap-southeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:internet-gateway/igw-019c31bd377789c21",
            "id": "igw-019c31bd377789c21",
            "owner_id": "409489027555",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fcf8092982c6fc5",
            "connectivity_type": "public",
            "id": "nat-0e025bc4ea3b5b849",
            "network_interface_id": "eni-04b34cede225460c2",
            "private_ip": "10.0.0.143",
            "public_ip": "54.251.45.105",
            "subnet_id": "subnet-08de42269b92af062",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-ap-southeast-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a294924a7ecf2dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e025bc4ea3b5b849",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a294924a7ecf2dd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019c31bd377789c21",
            "id": "r-rtb-03115166e5eaed87a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03115166e5eaed87a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:route-table/rtb-07a294924a7ecf2dd",
            "id": "rtb-07a294924a7ecf2dd",
            "owner_id": "409489027555",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e025bc4ea3b5b849",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:route-table/rtb-03115166e5eaed87a",
            "id": "rtb-03115166e5eaed87a",
            "owner_id": "409489027555",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019c31bd377789c21",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08456bd24a449f7b9",
            "route_table_id": "rtb-07a294924a7ecf2dd",
            "subnet_id": "subnet-05d0d8b7a304708a8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aaf757f5528a6f6",
            "route_table_id": "rtb-07a294924a7ecf2dd",
            "subnet_id": "subnet-0a3cdc9d2aef2db6e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce50e31ffac99c2d",
            "route_table_id": "rtb-07a294924a7ecf2dd",
            "subnet_id": "subnet-0bf7e93e0acfd4242"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce7b3348ac11cd94",
            "route_table_id": "rtb-03115166e5eaed87a",
            "subnet_id": "subnet-08de42269b92af062"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ba2350ef4b762a",
            "route_table_id": "rtb-03115166e5eaed87a",
            "subnet_id": "subnet-0f6a146546ee17181"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0454a80b2593e52a6",
            "route_table_id": "rtb-03115166e5eaed87a",
            "subnet_id": "subnet-0bbe496e2cf0a5cdb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-05d0d8b7a304708a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0d8b7a304708a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0a3cdc9d2aef2db6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3cdc9d2aef2db6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1b"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0bf7e93e0acfd4242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7e93e0acfd4242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1c"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-08de42269b92af062",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de42269b92af062",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0f6a146546ee17181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6a146546ee17181",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1b"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1b"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:subnet/subnet-0bbe496e2cf0a5cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbe496e2cf0a5cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409489027555",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1c"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra-public-ap-southeast-1c"
            },
            "vpc_id": "vpc-08a252cde0bffb7bc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:409489027555:vpc/vpc-08a252cde0bffb7bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d127c2ff3a47f5be",
            "default_route_table_id": "rtb-04ffebcfd750c76b3",
            "default_security_group_id": "sg-0336f42ca603506f4",
            "dhcp_options_id": "dopt-28fad44f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08a252cde0bffb7bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ffebcfd750c76b3",
            "owner_id": "409489027555",
            "tags": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra"
            },
            "tags_all": {
              "Blueprint": "ecs-blueprint-infra",
              "GithubRepo": "github.com/smartbenson1/ecs-blueprint-demo",
              "Name": "ecs-blueprint-infra"
            }
          }
        }
      ]
    }
  ]
}